# mcprogedit

./: Cargo.toml  README.md
doc/contrib/: book.toml
doc/contrib/src/: SUMMARY.md  blocks.md
doc/contrib/src/blocks/adding/: adding.md  block_entity.md  block_state.md  bookkeeping.md  checklist.md  group.md  trivial.md
doc/contrib/src/blocks/formats/: mcprogedit.md  minecraft.md
examples/casg/: main.rs
examples/outline/: main.rs
mcprogedit_internal_derive/: Cargo.toml
mcprogedit_internal_derive/src/: lib.rs
src/: arguments.rs  banner.rs  biome.rs  block.rs  block_cuboid.rs  block_entity.rs  bounded_ints.rs  bounds.rs  canvas.rs  chunk.rs  colour.rs  coordinates.rs  enchantment.rs  height_map.rs  inventory.rs  item.rs  lib.rs  light_cuboid.rs  main.rs  material.rs  mc_version.rs  nbt_lookup.rs  positioning.rs  region.rs  region_file.rs  status_effect.rs  utils.rs  world_excerpt.rs
src/block/: banner.rs  barrel.rs  beacon.rs  bed.rs  beehive.rs  brewing_stand.rs  chest.rs  chorus_plant.rs  dispenser.rs  door.rs  dropper.rs  flower_pot.rs  foilage.rs  furnace.rs  glazed_terracotta.rs  head.rs  hopper.rs  light.rs  noteblock.rs  redstone_repeater.rs  shulker_box.rs  sign.rs  stair.rs  trapdoor.rs  vines.rs
src/chunk/: common.rs  palette.rs  post_flattening.rs  pre_flattening.rs
tests/: load_1_12_2.rs
tests/saves/1_12_2/region/: r.0.0.mca
useful_specs/: NBT_legend.txt  chunk_format.txt  region_file_format.txt
