[package]
name = "mcprogedit"
version = "0.1.0"
authors = ["Terje Schjelderup <terjesc@pvv.org>"]
edition = "2018"
description = "Programmatically edit Minecraft savefiles and schematics."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-integer = "0.3.0"
byteorder = "1.4.2"
clap = "2.33.3"
hematite-nbt = "0.5.0"
once_cell = "1.19"
phf = { version = "0.8.0", features = ["macros"] }
serde_derive = "1.0"
serde_json = "1.0"
static_assertions = "1.1.0"
thiserror = "1.0.23"

[dev-dependencies]
clap = "2.33.3"
rand = "0.8.0"
